fixed cell-wrap  at calendar-page

--- a/static/styles/scss/calendar/calendar.scss
+++ b/static/styles/scss/calendar/calendar.scss
@@ -10,6 +10,15 @@
 .calendar__row {
     display: grid;
     grid-template-columns: repeat(8,1fr);
+    @media (max-width: 1420px) {
+        grid-template-columns: repeat(7,1fr);
+    }
+    @media (max-width: 1250px) {
+        grid-template-columns: repeat(6,1fr);
+    }
+    @media (max-width: 1080px) {
+        grid-template-columns: repeat(5,1fr);
+    }
 }
 
 .calendar__month {
